--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
         <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
-        <h1>チームで作成するwebサイトです</h1>
+        <img src="images/titlelogo.png" style="width: 8%;">
+        <h1>芸人紹介をするサイトです</h1>
+
         <p class="red">内容はこれから書きます</p>
+        <div class="mokuzi">
+            <h2>目次</h2>
+            <ul>
+                <li>芸人１</li>
+                <li>芸人２</li>
+                <li>芸人３</li>
+            </ul>
+        </div>
     </body>
 </html>
