いろいろいじりました
index.htmlに各サイトへのリンクのテンプレートを追加

--- a/index.html
+++ b/index.html
@@ -6,17 +6,49 @@
         <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
-        <img src="images/titlelogo.png" style="width: 8%;">
-        <h1>芸人紹介をするサイトです</h1>
+        <img src="images/title-logo.png" style="height: 80px;"><div style="text-align: center;">
+            <img src="images/title-txt.png" style="height: 80px; margin-left: 120px;" >
+            </div>
 
-        <p class="red">内容はこれから書きます</p>
-        <div class="mokuzi">
-            <h2>目次</h2>
-            <ul>
-                <li>芸人１</li>
-                <li>芸人２</li>
-                <li>芸人３</li>
-            </ul>
+        <div class="content">
+            <div class="top">
+                <h1></h1>
+            </div>
+                <p class="top_txt"></p>
+            
+            <div class="container">
+                <!-- ブログ1 -->
+                <div class="content_item">
+                <div class="content_txt">
+                    <h2>紹介する芸人</h2>
+                    <table>
+                        <tr>
+                            <td>
+                                <div class="more_btn">
+                                <a href="jera-don/page.html">ジェラードン</a>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="more_btn">
+                                <a href="#">バナナマン</a>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="more_btn">
+                                <a href="#">芸人の名前</a>
+                                </div>
+                            </td>
+                            <td>
+
+                            </td>
+                        </tr>
+
+                    </table>
+                </div>
+                </div>
+                <div class="snsIconWrap sideNav">
+                <p><a class="snsLink" target="_blank" rel="noreferrer noopener" href="URL"><img src="//images/twitter.jpg" alt="twitter" width="50" height="50"></a><a class="snsLink" target="_blank" rel="noreferrer noopener" href="URL"><img src="/images/facebook.jpg" alt="facebook" width="50" height="50"></a><a class="snsLink" target="_blank" rel="noreferrer noopener" href="URL"><img src="/images/youtube.jpg" alt="youtube" width="50" height="50"></a></p>
+                </div>
         </div>
     </body>
 </html>
