--- a/robart_akiyama/page.html
+++ b/robart_akiyama/page.html
@@ -10,7 +10,6 @@
 <img
 src="images/titlelogo.png">   
 <h1>ロバート 秋山</h1>
-<a
-href="https://img.youtube.com/vi/VIDEO_ID/default.jpg" >おすすめ動画</a> 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Fn9Pay1VZbw?si=JVryU5du0j3kwLEZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
