--- a/soshina/page.html
+++ b/soshina/page.html
@@ -6,8 +6,8 @@
         <link rel="stylesheet" href="a.css">
     </head>
     <body>
-        <h1>設楽統(バナナマン)</h1>
-        <img scr="" alt="です">
+        <h1>バナナマン</h1>
+        <img src="https://www.sponichi.co.jp/entertainment/news/2022/04/02/jpeg/20220402s00041000234000p_view.webp" alt="です">
         <h3>面白い</h3>
         <h3>優しい</h3>
         <h3>かっこいい</h3>
