秋山　最初の紹介

--- a/robart_akiyama/akiyama_page.html
+++ b/robart_akiyama/akiyama_page.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="style.css">
     <title>robartakiyama</title>
 </head>
-<body>
-<img
-src="images/titlelogo.png">   
-<h1>ロバート 秋山</h1>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Fn9Pay1VZbw?si=JVryU5du0j3kwLEZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<body> 
+<h1>ロバート 秋山竜次</h1>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/xPTXxRA394c?si=q2blGah5pZDQilB8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<p>お笑いトリオ「ロバート」のうちの一人。吉本興業所属。</p>
+<p>特技は扮装と作曲で、俳優としても活躍するなど多才である。</p>
+
 </body>
 </html>
