SNS等のリンク

--- a/index.html
+++ b/index.html
@@ -35,19 +35,15 @@
                             </td>
                             <td>
                                 <div class="more_btn">
-                                <a href="#">芸人の名前</a>
+                                <a href="#">ロバート秋山</a>
                                 </div>
                             </td>
-                            <td>
-
-                            </td>
                         </tr>
-
                     </table>
                 </div>
                 </div>
                 <div class="snsIconWrap sideNav">
-                <p><a class="snsLink" target="_blank" rel="noreferrer noopener" href="URL"><img src="//images/twitter.jpg" alt="twitter" width="50" height="50"></a><a class="snsLink" target="_blank" rel="noreferrer noopener" href="URL"><img src="/images/facebook.jpg" alt="facebook" width="50" height="50"></a><a class="snsLink" target="_blank" rel="noreferrer noopener" href="URL"><img src="/images/youtube.jpg" alt="youtube" width="50" height="50"></a></p>
+                <p><a class="snsLink" target="_blank" rel="noreferrer noopener" href="URL"><img src="images/twitter.jpg" alt="twitter" width="50" height="50"></a><a class="snsLink" target="_blank" rel="noreferrer noopener" href="URL"><img src="images/facebook.jpg" alt="facebook" width="50" height="50"></a><a class="snsLink" target="_blank" rel="noreferrer noopener" href="URL"><img src="images/youtube.jpg" alt="youtube" width="50" height="50"></a></p>
                 </div>
         </div>
     </body>
