--- a/jera-don/page.html
+++ b/jera-don/page.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>好きな芸人紹介/ジェラードン</title>
 </head>
 <body>
-    <h1>芸人の名前</h1>
+    <h1>ジェラードン</h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/?list=UURaaCxSF8nEpfG3ZHesXKxw" allowfullscreen></iframe>
     <div class="snsIconWrap sideNav">
-        <p><a class="snsLink" target="_blank" rel="noreferrer noopener" href="URL"><img src="//images/twitter.jpg" alt="twitter" width="50" height="50"></a><a class="snsLink" target="_blank" rel="noreferrer noopener" href="URL"><img src="/images/facebook.jpg" alt="facebook" width="50" height="50"></a><a class="snsLink" target="_blank" rel="noreferrer noopener" href="URL"><img src="/images/youtube.jpg" alt="youtube" width="50" height="50"></a></p>
+        <p>Twitter:かみちぃ<a class="snsLink" target="_blank" rel="noreferrer noopener" href="twitter.com/kamicigerrardon"><img src="../images/twitter.jpg" alt="twitter" width="50" height="50"></a>
+            Twitter:海野<a class="snsLink" target="_blank" rel="noreferrer noopener" href="twitter.com/uminoyuji"><img src="../images/twitter.jpg" alt="twitter" width="50" height="50"></a>
+            Twitter:にしもと<a class="snsLink" target="_blank" rel="noreferrer noopener" href="twitter.com/nisimotno"><img src="../images/twitter.jpg" alt="twitter" width="50" height="50"></a></p>
+        <p>Youtube(メイン)<a class="snsLink" target="_blank" rel="noreferrer noopener" href="https://youtube.com/@gerrardon?si=lKWvoLrye2I6R4zW"><img src="../images/youtube.jpg" alt="youtube" width="50" height="50"></a>
+            YouTube(サブ)<a class="snsLink" target="_blank" rel="noreferrer noopener" href="https://youtube.com/channel/UCRaaCxSF8nEpfG3ZHesXKxw"><img src="../images/youtube.jpg" alt="youtube" width="50" height="50"></a></p>
+        <p>吉本プロフィール<a class="snsLink" target="_blank" rel="noreferrer noopener" href="https://profile.yoshimoto.co.jp/talent/detail?id=3450"><img src="../images/ogp.png" alt="yosimoto" width="50" height="50"></a></p>
         </div>
 </body>
 </html>
