--- a/robart_akiyama/akiyama_page.html
+++ b/robart_akiyama/akiyama_page.html
@@ -7,8 +7,7 @@
     <title>robartakiyama</title>
 </head>
 <body>
-<img
-src="images/titlelogo.png">   
+    <img src="images/title-logo.png">
 <h1>ロバート 秋山</h1>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Fn9Pay1VZbw?si=JVryU5du0j3kwLEZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
