--- a/robart_akiyama/akiyama_page.html
+++ b/robart_akiyama/akiyama_page.html
@@ -9,8 +9,21 @@
 <body> 
 <h1>ロバート 秋山竜次</h1>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/xPTXxRA394c?si=q2blGah5pZDQilB8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<p>お笑いトリオ「ロバート」のうちの一人。吉本興業所属。</p>
-<p>特技は扮装と作曲で、俳優としても活躍するなど多才である。</p>
-
+<p>1978年8月15日生まれ。福岡県北九州市出身。吉本興業所属。</p>
+<p>お笑いトリオ「ロバート」のうちの一人。</p>
+<h2>ロバート秋山の好きなところ3選！</h2>
+<p><strong>①とにかく多才</strong></p>
+<p>芸人としてだけでなく俳優としても活躍しており、大河ドラマ「光る君へ」やTBS系「不適切にもほどがある！」などの話題作にも出演されています。</p>
+<p>さらに歌も上手で、「願い」や「TOKAKUKA」は名曲です。</p>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2sXiJ4C9i25i4h5rdn3WQO?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+<p><strong>②クリエーターズファイルが面白すぎる</strong></p>
+<p>ロバートの秋山さんは、ロバートとしてのyoutubeチャンネルだけでなく「ロバート秋山のクリエーターズファイル」という架空の人物に扮装して取材を受けるチャンネルも持っていらっしゃいます。</p>
+<p>ここではその中でも特におすすめの動画を紹介します。</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Fn9Pay1VZbw?si=rwuyTZmg-4Lr3zBY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<p>ぼっちん君は紅白歌合戦にも出演していました。</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/iPHFhh5ymQM?si=tk82_2VsD1uN0c7O" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<p>歌声とビジュアルに注目です。</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/CSK4TrZNfCg?si=5aXHUWsZQeIh1IOb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<p>2部作品なので②もぜひ見てほしいです。</p>
 </body>
 </html>
