ジェラードンのページの更新

--- a/jera-don/page.html
+++ b/jera-don/page.html
@@ -8,6 +8,48 @@
 <body>
     <h1>ジェラードン</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/?list=UURaaCxSF8nEpfG3ZHesXKxw" allowfullscreen></iframe>
+    <h3>profile</h3>
+    <h4>プロフィール</h4>
+<table>
+    <tr>
+        <th>名前</th>
+        <th>かみちぃ</th>
+        <th>海野</th>
+        <th>にしもと</th>
+    </tr>
+    <tr>
+        <td><strong>生年月日</strong></td>
+        <td>1987年07月24日</td>
+        <td>1987年11月17日</td>
+        <td>1987年07月14日</td>
+    </tr>
+    <tr>
+        <td><strong>出身地</strong></td>
+        <td>宮崎</td>
+        <td>愛知</td>
+        <td>愛知</td>
+    </tr>
+    <tr>
+        <td><strong>血液型</strong></td>
+        <td>AB型</td>
+        <td>A型</td>
+        <td>B型</td>
+    </tr>
+    <tr>
+        <td><strong>趣味</strong></td>
+        <td>バスケ/バスケットボール/NBA観戦/K-POP/猫好き/マイム芸/字がきれい/K-POPカバーダンス</td>
+        <td>ゲーム/お酒/ドライブ/サッカー/フラフープ/Mr.Childrenライブツアー参加</td>
+        <td>サッカー/絵/乳首関係/絵を描く事</td>
+    </tr>       
+</table>
+<hr>
+<li>おすすめの動画
+    <ol>
+        <li><a href="https://youtu.be/VnrzGH7bu14?feature=shared">お見合いでお互いナシすぎて、逆に仲良くなった</a></li>
+        <li><a href="https://youtu.be/OtJvFyqqeo0?feature=shared">貫禄ありすぎて、父親と間違われる引きこもり生徒</a></li>
+        <li><a href="https://youtu.be/fO6JebRGQfg?feature=shared">握手会</a></li>
+    </ol>
+</li>
     <div class="snsIconWrap sideNav">
         <p>Twitter:かみちぃ<a class="snsLink" target="_blank" rel="noreferrer noopener" href="twitter.com/kamicigerrardon"><img src="../images/twitter.jpg" alt="twitter" width="50" height="50"></a>
             Twitter:海野<a class="snsLink" target="_blank" rel="noreferrer noopener" href="twitter.com/uminoyuji"><img src="../images/twitter.jpg" alt="twitter" width="50" height="50"></a>
