--- a/robart_akiyama/akiyama_page.html
+++ b/robart_akiyama/akiyama_page.html
@@ -24,6 +24,7 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/iPHFhh5ymQM?si=tk82_2VsD1uN0c7O" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <p>歌声とビジュアルに注目です。</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/CSK4TrZNfCg?si=5aXHUWsZQeIh1IOb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<p>2部作品なので②もぜひ見てほしいです。</p>
+<p>こちらは2部作品なので②もぜひ見てほしいです。</p>
+<p><strong>③ラジオが個性的なコーナーたくさんで面白い</strong></p>
 </body>
 </html>
